mod info cache now expires after 7 days